2001-08-24  Kenny Simpson  <kenny.simpson@gs.com>

	libstdc++/3740
	* include/bits/std_sstream.h (basic_ostringstream): Fix ctor.

2001-08-24  Sylvain Pion <Sylvain.Pion@sophia.inria.fr>
            Phil Edwards  <pme@sources.redhat.com>

	PR libstdc++/3349
	* include/bits/stl_tree.h (insert_unique):  Revert last change.
	Values inserted at begin() must be less, not greater, than *begin()'s.
	* testsuite/23_containers/map_insert.cc:  New file.

2001-08-23  Benjamin Kosnik  <bkoz@redhat.com>

	* config/locale/c_locale_gnu.cc: Minor tweaks.
	(moneypunct<wchar_t>): Implement.
	* include/bits/locale_facets.h: Same.
	* testsuite/22_locale/moneypunct.cc: New file.
	* testsuite/22_locale/moneypunct_byname.cc: New file.
	* testsuite/22_locale/moneypunct_char_members.cc: New file.	

2001-08-23  David Edelsohn  <edelsohn@gnu.org>

	* config/os/gnu-linux/bits/os_defines.h: Correct __s390__ definitions.
	Set __powerpc__ long double definition based on __LONG_DOUBLE_128__.

2001-08-23  Jason Merrill  <jason_merrill@redhat.com>

	* testsuite_flags.in (build-includes): Re-add backward.

2001-08-22  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/22_locale/collate_wchar_t_members.cc: Guard
	with _GLIBCPP_USE_WCHAR_T.

2001-08-21  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/22_locale/collate_byname.cc (test01): Fix.

2001-08-18  Vladimir A Merzliakov  <wanderer@rsu.ru>

	* include/bits/locale_facets.tcc (collate::do_transform): Add typename.

2001-08-18  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/22_locale/operators.cc: Add test.
	
2001-08-17  Benjamin Kosnik  <bkoz@redhat.com>

	Implement std::collate.	
	* config/locale/collate_specializations_gnu.cc: Add here, implement in
	MT-safe way.
	* config/locale/collate_specializations_generic.cc: Add here, but
	in a less sophisticated manner.
	* include/bits/locale_facets.tcc (collate): Add generic definition.
	* include/bits/locale_facets.h (~collate): Mark virtual.
	(collate::_M_compare_helper): New.