@@ -1,3 +1,8 @@
+2001-08-24  Phil Edwards  <pme@sources.redhat.com>
+
+	* docs/html/23_containers/howto.html:  Describe implementation of
+	insertion with hints.
+
 2001-08-24  Kenny Simpson  <kenny.simpson@gs.com>
 
 	libstdc++/3740
